search for OpenCV

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 project( pola )
 
-# adapt for macports - mosquitto cmake not included...:
+find_package( OpenCV REQUIRED )
+include_directories( ${OpenCV_INCLUDE_DIRS} )
+
+# adapt for macports:
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   include_directories ("/opt/local/include/opencv4")
   link_directories("/opt/local/lib")
@@ -10,6 +13,6 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(pola pola.cpp )
-target_link_libraries (pola ${EXTRA_LIBS} opencv_videoio opencv_highgui opencv_core )
+target_link_libraries (pola ${EXTRA_LIBS} ${OpenCV_LIBS}  )
 
 INSTALL(TARGETS pola DESTINATION bin)
